adding indexer demo

--- a/rbtree/Makefile
+++ b/rbtree/Makefile
@@ -3,7 +3,7 @@ CFLAGS=-c -g -Wall -Werror
 INC_DIR=-I./
 LIBRARY=-linfra
 
-all: rbtree_demo lookup_table
+all: rbtree_demo lookup_table indexer
 
 rbtree_demo: demo.o rbtree.o
 	${CC} -o $@ $^
@@ -11,8 +11,11 @@ rbtree_demo: demo.o rbtree.o
 lookup_table: lookup_table.o rbtree.o
 	${CC} -o $@ $^
 
+indexer: indexer.o rbtree.o
+	${CC} -o $@ $^
+
 %.o: %.c
 	${CC} ${CFLAGS} ${INC_DIR} $^
 
 clean:
-	rm -f *.o rbtree_demo lookup_table
+	rm -f *.o rbtree_demo lookup_table indexer
